History of this buildout
========================

3.24 (unreleased)
-----------------

- Make get_file_brains more efficient by not getting objects.
  [maurits]

- Add Council member to the View meeting in digibib in the rolemap.xml.
  [jladage]


3.23 (2011-10-17)
-----------------

- Fixed a few out-of-date cases for generating a pdf.
  [maurits]

- Fixed ValueError when viewing a meeting with an unexpected value in
  the participants.
  [maurits]


3.22 (2011-10-13)
-----------------

- Fixed date display in datetime macro.
  [maurits]

- Added migration to fix unordered agenda items.
  [maurits]


3.21 (2011-10-12)
-----------------

- Sort the project archive on advisory date intead of deadline.
  [maurits]


3.20 (2011-10-12)
-----------------

- Removed indexes/brains from the schema definations of our content
  types.  Not completely sure if this code is actually having an
  effect still, but we certainly do not want it.  We use catalog.xml
  and setuphandlers.py or Extensions/install.py.
  [maurits]


3.19 (2011-10-12)
-----------------

- Fixed the condition for making agenda items draggable in events.
  [maurits]

- Moved can_be_edited method to the base agenda item.
  [maurits]

- Note that getStart_time and get_end_time should both be DateIndexes,
  otherwise the sort order is not defined properly.
  [maurits]


3.18 (2011-10-10)
-----------------

- Added upgrade step in Products.minaraad to update the security settings.
  [maurits]


3.17 (2011-10-10)
-----------------

- Added membership_organizations minaraad property and use that for
  the disagreeingMembers field of a project.
  [maurits]

- Changed the 'published' checkbox for attachments to toggle between
  published and restricted.
  [maurits]

- Add a restricted state for file attachments.
  [maurits]

- Give Council Members the 'view project in digibib' role.
  [maurits]

- Use a simple reference widget that only shows active projects.
  [maurits]
